# logoLoader

./: .gitignore  Cargo.toml  logo_loader.toml.example
logo-cruncher-app/: angular.json  package.json  pnpm-lock.yaml
logo-cruncher-app/src/: index.html  styles.css
logo-cruncher-app/src-tauri/: Cargo.toml  tauri.conf.json
logo-cruncher-app/src-tauri/src/: commands.rs  lib.rs  main.rs
logo-cruncher-app/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
src/: background_works.rs  config.rs  image_loader.rs  image_worker.rs  job_loaders.rs  lib.rs  loaders.rs  logger.rs  main.rs  otp.rs  parsers.rs  save.rs  svg_saver.rs  vectorize.rs
