[package]
name = "logoLoader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.9", default-features = false }
kmeans_colors = "0.7.1"
palette = "0.7.6"
base64 = "0.22.1"
oxipng = "10.0.0"
indicatif = "0.18.3"
log = "0.4.29"
fern = "0.7.1"
chrono = "0.4.43"
futures = "0.3.31"
anyhow = "1.0.100"
vtracer = "0.6.5"
visioncortex = "0.8.10"
regex = "1.12.2"
